# OpenVEILPython

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Samples/: dumpmodule.py  tokenList.py
cmakemodules/: FindPythonLibs.cmake  compiler_tecsec_msvc.cmake  summary.cmake  tecsec_top.cmake
include/: OpenVEILWrapper.h
make/linux/: bootstrap-codeblocks.sh  bootstrap-make.sh  bootstrap-x86.sh  bootstrap.sh
make/windows/: bootstrap-msys2-make.sh  bootstrap_VS.cmd  bootstrap_VS2013.cmd  bootstrap_VS2013_nmake.cmd  bootstrap_VS2013_release.cmd  bootstrap_VS2015.cmd  bootstrap_VS2015_nmake.cmd  resetenv.cmd.in
make/windows/support/: BldAll.cmd.in  BldDebug.cmd.in  BldRelease.cmd.in  BuildAll.cmd.in  BuildDebug.cmd.in  BuildRelease.cmd.in  CleanAll.cmd.in  CleanDebug.cmd.in  CleanRelease.cmd.in  RebuildAll.cmd.in  RebuildDebug.cmd.in  RebuildRelease.cmd.in
src/: CMakeLists.txt  ConnectorWrappers.cpp  FavoriteWrapper.cpp  OpenVEILWrapper.cpp  SessionWrapper.cpp  TokenWrapper.cpp
